--- a/docs/_main.tex
+++ b/docs/_main.tex
@@ -132,7 +132,11 @@
 \hypertarget{introduuxe7uxe3o}{%
 \chapter{Introdução}\label{introduuxe7uxe3o}}
 
-É importante começarmos pelos conceitos básicos para criar um vocabulário consistente e permitir uma comunicação clara entre os interessados em discutir e aprender estatística e análise de dados. Estatística e análise de dados é uma habilidade crucial no processo de extração de informação para tomada de decisão. A quantidade de dados disponível para consulta vem crescendo exponencialmente e analisar estes dados tem sido útil para diversas organizações.
+Acho importante começar pelos conceitos básicos para criar um vocabulário consistente e permitir uma comunicação clara entre os interessados em discutir e aprender estatística, análise de dados, ciência de dados e outras denominações dessa nova competência. A quantidade de dados disponível vem crescendo exponencialmente e analisá-los tem sido útil para diversas organizações. Logo, a habilidade em lidar com esses dados é crucial para o profissional que deseja extrair informação útil.
+
+A Harvard Business Review, revista conceituada em administração e negócios, em uma matéria de opinião afirmou no título que este é um dos empregos mais sexy deste século 21 e exemplificou o conceito do que é um ser um cientista de dados \citep{hbr2012}. Porém, acredito que outras pessoas podem ter visões diferentes do que é um emprego sexy, como por exemplo Joel Grus (2016) \citep{grus2016}, que acredita que a matéria da Harvard Business foi escrito por alguém que nunca visitou um quartel do corpo de bombeiros. Particularmente, a escolha do que é ser sexy foge do escopo desse livro e me parece uma questão de gosto. Mas concordo com Joel quando ele diz que o campo está em alta e evidência.
+
+Nas análises preditivas são extraídas informações a partir dos dados. Entendemos os dados como fatos brutos, como por exemplo, o nome de um estudante e o número do CPF.
 
 \hypertarget{estimativas-de-localizauxe7uxe3o}{%
 \section{Estimativas de localização}\label{estimativas-de-localizauxe7uxe3o}}
