--- a/book.bib
+++ b/book.bib
@@ -1,3 +1,16 @@
+@book{grus2016,
+  title={Data science do zero},
+  author={Grus, Joel},
+  year={2016},
+  publisher={Alta books}
+}
+
+@misc{hbr2012,
+  year=2012,
+  author="Harvard Business Review",
+  note="https://hbr.org/2012/10/data-scientist-the-sexiest-job-of-the-21st-century"
+}
+
 @book{bruce2020practical,
   title={Practical statistics for data scientists: 50+ essential concepts using R and Python},
   author={Bruce, Peter and Bruce, Andrew and Gedeck, Peter},
